syntax = "proto3";
import "explorers_service.proto";

package org.example.grpc;

option java_package = "org.example.grpc";

service ExplorerGroupService {
  rpc findExplorerGroupById(ExplorerGroupByIdRequest) returns (ExplorerGroup) {
  }
  rpc findExplorerGroupsByKeeperId(ExplorerGroupsByKeeperIdRequest) returns (ExplorerGroupList) {
  }
  rpc findExplorerGroupsByGroupIdIn(ExplorerGroupsByGroupIdInRequest) returns (ExplorerGroupsByGroupIdInResponse) {
  }
  rpc findExplorerGroupsByKeeperIdIn(ExplorerGroupsByKeeperIdInRequest) returns (ExplorerGroupList) {
  }
  rpc createGroup(CreateGroupRequest) returns (ExplorerGroup) {
  }
}

message ExplorerGroupByIdRequest {
  int64 groupId = 1;
}

message ExplorerGroupsByKeeperIdRequest {
  int64 keeperId = 1;
}

message ExplorerGroupsByGroupIdInRequest {
  repeated int64 groupIds = 1;
}

message ExplorerGroupsByGroupIdInResponse {
  map<int64, ExplorerGroup> groupByGroupIdMap = 1;
}

message ExplorerGroupsByKeeperIdInRequest {
  repeated int64 keeperIds = 1;
}

message ExplorerGroupList {
  repeated ExplorerGroup groups = 1;
}

message CreateGroupRequest {
  int64 courseId = 1;
  int64 keeperId = 2;
}

message ExplorerGroup {
  int64 groupId = 1;
  int64 courseId = 2;
  int64 keeperId = 3;
  repeated Explorer explorers = 4;
}